--- a/package.json
+++ b/package.json
@@ -39,8 +39,8 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://<GITHUB_USERNAME>.github.io/<REPO_NAME>",
   "devDependencies": {
     "gh-pages": "^6.3.0"
-  }
+  },
+  "homepage": "https://<GITHUB_USERNAME>.github.io/<REPO_NAME>"
 }
