--- a/package.json
+++ b/package.json
@@ -42,5 +42,5 @@
   "devDependencies": {
     "gh-pages": "^6.3.0"
   },
-  "homepage": "https://<GITHUB_USERNAME>.github.io/<REPO_NAME>"
+  "homepage": "https://2ndrushedd-spec.github.io/piano-learning/"
 }
